# katalogue-python

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  smoke_tests.py
.claude/: settings.json  settings.local.json
.claude/agents/: README.md  atlas.md  dana.md  kai.md  mira.md  reed.md  sven.md  vera.md
.claude/hooks/: post_edit.sh
.claude/plans/: generate-dbt-sources.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml
docs/: astro.config.mjs  cli-reference.md  custom-templates.md  datatype-converter.md  getting-started.md  index.md  package-lock.json  package.json  pypi-publish-guide.md
docs/cicd/: pypi-publish-guide.md
docs/cli/: commands.md  output-formats.md
docs/guides/: datatype-conversion.md  exporting.md  templates.md
docs/maintainers/: publishing.md  retrieval-and-export-design.md
docs/read/: custom-templates.md
docs/reference/: filtering.md  resources.md  troubleshooting.md
docs/sdk/: client.md  options.md
docs/src/styles/: custom.css
tests/: conftest.py  test_cli_common.py  test_cli_dataset.py  test_cli_datasource.py  test_cli_export.py  test_cli_field.py  test_cli_glossary.py  test_cli_system.py  test_client.py  test_config.py  test_formatters.py
tests/fixtures/: error_400.json  error_401.json  system_list.json
(+30 files in other folders)
