[project]
name = "katalogue-cli"
version = "0.1.0"
description = "CLI for the Katalogue Data Catalog API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "requests-oauthlib>=1.3",
]

[project.scripts]
katalogue = "katalogue.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/katalogue"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "requests-mock>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
